2010-03-04  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/appconfig.cpp: Use 'xdg-email' as mail client and 'xdg-open' as web
	browser.

2010-02-10  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* build/snapshot-deb.sh: Adjust the script for debian package.
	* configure.ac: Add pkg-config for libx11-dev.

2010-02-08  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* build/make-new-release.sh,
	build/snapshot-deb.sh: Add a script to rapidly generate debian package.
	* configure.ac,
	plugin/src/Makefile.am,
	src/view/telnetcon.cpp: Fix the compilation error when enable plugin.

2010-02-07  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* developers/make-new-release.sh: Move to another folder and adjust the
	way to get version number.
	* configure.ac: Fix the warnings caused by AC_CACHE_VAL of Autoconf Macro,
	and change bug report to http://code.google.com/p/pcmanx-gtk2/issues/list.
	* plugin/src/plugin.cpp: Fix the compilation error and strip warnings.

2010-01-13  Youchen Lee  <copyleft@utcr.org>

	* src/nancy_bot/msg_data.cpp: 
	Ignore "File not found" messages of NancyBot.

2009-08-26  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* data/nancy_bot/default_msg.data,
	pcmanx-gtk2.spec.in,
	po/zh_CN.po,
	po/zh_TW.po,
	src/core/termdata.cpp,
	src/mainframe.cpp,
	src/pcmanx_gtk2.cpp: Change official website url of pcmanx-gtk2.

2009-08-03  Shih-Yuan Lee (FourDollars)  <fourdollars@gmail.com>

	* configure.ac: Bump to 0.3.9
	* developers/make-new-release.sh: Add more build test case.
	* NEWS: Adjust 0.3.9 to August 2009.
	* developers/make-new-release.sh: Log during build test case.

2009-08-03  Jim Huang  <jserv@0xlab.org>

	* src/mainframe.cpp (CMainFrame::OnFont) (CMainFrame::OnFontEn):
	Fix mistaken font size got from font dialog.
	Merged from http://code.google.com/p/gemanx/source/detail?r=26 .

2009-08-03  Chih-Min Chao  <cmchao@gmail.com>
	    Jim Huang  <jserv@0xlab.org>

	* src/mainframe.h (OnNotebookPopupMenu)